first_server/server-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: listen-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
  - "*"
  gateways:
  - listen-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /about
    - uri:
        exact: /server
    route:
    - destination:
        host: server
        port:
          number: 8080
